--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,15 +9,16 @@
   </head>
   <body>
     <div class="page-header">
-        <h1><a href="/">nikhil Django test</a></h1>
+      <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+      <h1><a href="/">nikhil Django test</a></h1>
     </div>
     <div class="content container">
-        <div class="row">
-            <div class="col-md-8">
-            {% block content %}
-            {% endblock %}
-            </div>
+      <div class="row">
+        <div class="col-md-8">
+          {% block content %}
+          {% endblock %}
         </div>
+      </div>
     </div>
   </body>
 </html>
